# raylib-python-ctypes

./: .gitignore  .gitmodules  CONVENTIONS.md  LICENSE  MANIFEST.in  README.md  filesGeneration.py  how to build for pip  how_to_publish  pyproject.toml  setup.cfg  setup.py
examples/audio/: audio_music_stream.py
examples/core/: core_2d_camera.py  core_2d_camera_mouse_zoom.py  core_3d_camera_free.py  core_basic_window.py  core_basic_window_web.py
examples/models/: models_loading_gltf.py
examples/others/: easing_functions_visualization.py  rlgl_compute_shader.py
examples/shaders/: shaders_julia_set.py
examples/shapes/: shapes_basic_shapes.py  shapes_bouncing_ball.py  shapes_easings_ball_anim.py
examples/text/: text_input_box.py
examples/textures/: textures_background_scrolling.py  textures_bunnymark.py
pylibc/: __init__.py  __init__.pyi  functions.json
pylibc/colors/: __init__.py  __init__.pyi
pylibc/customExceptions/: __init__.py
pylibc/enums/: __init__.py
pylibc/fileGeneration/: __init__.py
pylibc/structures/: __init__.py  __init__.pyi
raygui examples/custom sliders/: custom_sliders.py
raygui examples/portable_window/: makefile  portable_window.py  portable_window.pyx
raypyc/: __init__.pxd  __init__.py  __init__.pyi  config_api.json  raudio_api.json  raygui_api.json  raylib_api.json  raymath_api.json  reasings.py  rlgl_api.json  web.pxd
raypyc/colors/: __init__.py  __init__.pyi
raypyc/defines/: __init__.py  __init__.pyi
raypyc/enums/: __init__.py  __init__.pyi
raypyc/fileGeneration/: __init__.py
raypyc/includes/: raylib.h
(+10 files in other folders)
