[metadata]
name = raypyc
version = 0.1.8
author = Dor Shapira
author_email = sdor2803@gmail.com
description = A python wrapper for raylib using ctypes
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sDos280/raylib-python-ctypes
license = MIT License
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
packages = find:
python_requires = >=3.6
include_package_data = True